# quartz

./: .clang-format  .gitignore  .gitignore.orig  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_STRUCTURE.md  H_CZ_2_2_complete_ECC_set_modified.json  INSTALL.md  Makefile  README.md  asplos_mini_circuit.qasm  asplos_mini_mapping.txt  env.yml  extract_results.py  gen_ecc_set.sh  ilp.py  mapping127.txt  mbq_large_test.qasm  mbq_test.qasm  notes.md  pyproject.toml  quartz.cpp  quartz_api.c  quartz_api.h  rl_eh.txt  run_ibmq.sh  run_ibmq_disable_search.sh  run_ibmq_td_disabled.sh  run_ionq.sh  run_nam.sh  run_nam_disable_search.sh  run_nam_rm.sh  run_nam_td_disabled.sh  run_nam_worm.sh  run_rigetti.sh  run_rigetti_disable_search.sh  run_rigetti_new.sh  run_rigetti_td_disabled.sh  run_scalability.sh  (+9 more)
config/: config.inc  config.linux  config.py
context/: context.cpp  context.h  rule_parser.h
dag/: dag.cpp  dag.h  daghyperedge.h  dagnode.cpp  dagnode.h
dagcircuit/: dag.cpp  dag.h  dagcircuit.cpp  dagcircuit.h  daghyperedge.h  dagnode.h  utils.h
dataset/: dataset.cpp  dataset.h  equivalence_set.cpp  equivalence_set.h
doc/: README.md  architecture.md  dev-setup.md  dev_setup.md  installation.md
eccset/: Clifford_T_5_3_complete_ECC_set.json  H_CZ_2_2_complete_ECC_set.json  H_CZ_2_2_complete_ECC_set_modified.json
experiment/: .gitignore  Qiskit.ipynb  RL_pipeline.ipynb  __init__.py  back_tracking_search.ipynb  back_tracking_search.ipynb.orig  back_tracking_search.py  draw_circuit.ipynb  env.yml  gen_data_set.py  gen_data_set.py.orig  get_near_56.py  get_positive_reward_data.py  get_positive_reward_data.py.orig  gnn.ipynb  gnn.py  make_build.sh  near_56_rz.qasm  old_gen.py  pos_data.py  pos_data.py.orig  pyquil.ipynb  qasm_normalizer.ipynb  rl_a2c.py  rl_a2c_rewrite.py  rl_dqn.py  rl_dqn.py.orig  rl_pipeline_dqn.py  rl_pipeline_dqn.py.orig  rl_ppo.py  test.ipynb  test.py  test_apply_xfer.ipynb  test_quartz.ipynb  toffoli_flip.ipynb
gate/: add.h  all_gates.h  ccz.h  ch.h  cx.h  cz.h  gate.cpp  gate.h  gate_utils.cpp  gate_utils.h  gates.inc.h  h.h  input_param.h  input_qubit.h  neg.h  pdg.h  rx.h  ry.h  rz.h  s.h  sdg.h  tdg.h  u1.h  u2.h  u3.h  x.h  y.h
generator/: generator.cpp  generator.h
math/: matrix.h  vector.cpp  vector.h
parser/: qasm_parser.h
python/: draw_graph.py  requirements.txt  setup.py  verify_equivalences.py
rl/: QBert.py  QGNN.py  pretraining.ipynb  train.py
scripts/: gen_ecc_set.sh  run_ibmq.sh  run_ibmq_disable_search.sh  run_ibmq_td_disabled.sh  run_ionq.sh  run_nam.sh  run_nam_disable_search.sh  run_nam_rm.sh  run_nam_td_disabled.sh  run_nam_worm.sh  run_rigetti.sh  run_rigetti_disable_search.sh  run_rigetti_new.sh  run_rigetti_td_disabled.sh  run_t_tdg_rm.sh  run_t_tdg_worm.sh  run_table2.sh  setup_environment.bat  show_table2_results.py
simulator/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_optimization_steps.cpp  dp.cpp  ilp_num_stages.cpp  nam_middle_circuits.cpp  nam_small_circuits.cpp
src/examples/: CMakeLists.txt  test_sim.cc
src/sim/: CMakeLists.txt  circuit.cc  circuit.h  const.h  distributed_simulator.cc  distributed_simulator.cu  distributed_simulator.h  helper.h  kernel.cu  kernel.h  machine_view.h  mapper.cc  mapper.h  simgate.h  simulator.cu  simulator.h
src/sim/bench/: run.sh  srun-1-hyquas.sh  srun-1-quartz.sh  srun-2-hyquas.sh  srun-2-quartz.sh  srun-4-hyquas.sh  srun-4-quartz.sh  srun-8-hyquas.sh  srun-8-quartz.sh  srun-nccl.sh  srun.sh
src/sim/cmake/: cuda.cmake  cuquantum.cmake  legion.cmake  mpi.cmake  nccl.cmake
src/sim/examples/: CMakeLists.txt  test_sim.cc  test_sim_legion.cc
src/sim/examples/legion-based/: CMakeLists.txt  test_sim_legion.cc
src/sim/examples/mpi-based/: CMakeLists.txt  test_sim.cc
src/sim/include/: circuit.h  const.h  cuda_helper.h  distributed_simulator.h  distributed_simulator_const.h  kernel.h  machine_view.h  mapper.h  simgate.h  simulator.h
src/sim/src/: accessor.cc  circuit.cc  distributed_simulator.cc  distributed_simulator.cu  machine_view.cc  mapper.cc  run.sh
src/sim/src/base/: circuit.cc  kernel.cu  simulator.cu
src/sim/src/offload/: accessor.cc  distributed_simulator.cc  distributed_simulator.cu  mapper.cc
src/test/: CMakeLists.txt  _benchmark_sabre_1_pass.cpp  bfs_plan_search.cpp  check_front_percentage.cpp  gen_ecc_set.cpp  gen_ecc_set.h  oracle.cpp  oracle.h  preprocess.cpp  preprocess_rotation_merging.cpp  test_add_swap.cpp  test_add_xfer.py  test_all.cpp  test_appliable_xfer.cpp  test_apply_action.cpp  test_apply_action_full.cpp  test_apply_mapping.cpp  test_apply_xfer.cpp  test_arb.cpp  test_bfs.cpp  test_bfs.cpp.orig  test_constants.cpp  test_context_shift.cpp  test_context_shift.h  test_create_graphXfer_from_qasm.cpp  test_dataset.h  test_default_fidelity_graphs.cpp  test_device.cpp  test_draw_circuit.py  test_env.cpp  test_env_hybrid.cpp  test_env_random_start.cpp  test_equivalence_set.cpp  test_execute_gate.cpp  test_fidelity_calculation.cpp  test_fidelity_integrity.cpp  test_find_executable_front_gates.cpp  test_from_and_to_qasm.cpp  test_front_set.cpp  test_game.cpp  (+69 more)
src/wrapper/: CMakeLists.txt  oracle.cpp  oracle.h  test_oracle.cpp
src/wrapper/rpc/: test_rpc.cpp  wrapper_rpc.cpp
src/wrapper/rust/: oracle.cpp  oracle.h  test_wrapper.cpp  wrapper.cpp  wrapper.h  wrapper_rpc.cpp  wrapper_rust.cpp  wrapper_rust.h
tasograph/: substitution.cc  substitution.h  tasograph.cc  tasograph.cc.orig  tasograph.h
test/: CMakeLists.txt  test_all.cpp  test_apply_xfer.cpp  test_bfs.cpp  test_context_shift.cpp  test_context_shift.h  test_dataset.h  test_device.cpp  test_draw_circuit.py  test_equivalence_set.cpp  test_generator.cpp  test_generator.h  test_graph_to_qasm.cpp  test_num_eccs.cpp  test_optimization.cpp  test_optimization.h  test_optimization_sa.cpp  test_phase_shift.cpp  test_pruning.cpp  test_pruning.h  test_quartz.cpp  test_rigetti.cpp  test_rotation_merging.cpp  test_sparsity.cpp  test_toffoli_flip.cpp  test_verifier.py
utils/: arb_complex.cpp  arb_complex.h  draw_circuit.py  utils.h  utils.py
verifier/: gates.py  (+4 more)
(+3151 files in other folders)
