cmake_minimum_required(VERSION 3.16)
project(quantum-superoptimization)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Debug")

set(USE_ARBLIB FALSE)

if(USE_ARBLIB)
    macro (add_executable _name)
        # invoke built-in add_executable
        _add_executable(${ARGV})
        if (TARGET ${_name})
            target_link_libraries(${_name} flint flint-arb gmp quartz_runtime)
        endif()
    endmacro()
    add_compile_definitions(USE_ARBLIB)
else()
    macro (add_executable _name)
        # invoke built-in add_executable
        _add_executable(${ARGV})
        if (TARGET ${_name})
            target_link_libraries(${_name} quartz_runtime)
        endif()
    endmacro()
endif()

include_directories(${CMAKE_INCLUDE_PATH})
include_directories("../src/")

link_directories("../")

file(GLOB_RECURSE TEST_ALL "test_all.cpp")
file(GLOB_RECURSE TEST_BFS "test_bfs.cpp")
file(GLOB_RECURSE TEST_CONTEXT_SHIFT "test_context_shift.cpp")
file(GLOB_RECURSE TEST_EQUIV_SET "test_equivalence_set.cpp")
file(GLOB_RECURSE TEST_GENERATOR "test_generator.cpp")
file(GLOB_RECURSE TEST_GRAPH_TO_QASM "test_graph_to_qasm.cpp")
file(GLOB_RECURSE TEST_OPTIMIZATION "test_optimization.cpp")
file(GLOB_RECURSE TEST_OPTIMIZATION_SA "test_optimization_sa.cpp")
file(GLOB_RECURSE TEST_PHASE_SHIFT "test_phase_shift.cpp")
file(GLOB_RECURSE TEST_PRUNING "test_pruning.cpp")
file(GLOB_RECURSE TEST_QUARTZ "test_quartz.cpp")
file(GLOB_RECURSE TEST_RIGETTI "test_rigetti.cpp")
file(GLOB_RECURSE TEST_ROTATION_MERGING "test_rotation_merging.cpp")
file(GLOB_RECURSE TEST_SPARSITY "test_sparsity.cpp")
file(GLOB_RECURSE TEST_TOFFOLI_FLIP "test_toffoli_flip.cpp")
file(GLOB_RECURSE TEST_APPLY_XFER "test_apply_xfer.cpp")
if(USE_ARBLIB)
    file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
endif()

# add_library(libquartz_runtime SHARED IMPORTED)
# set_property(TARGET libquartz_runtime PROPERTY IMPORTED_LOCATION "../libquartz_runtime.so")

add_executable(test_all ${TEST_ALL} )
add_executable(test_bfs ${TEST_BFS} )
add_executable(test_context_shift ${TEST_CONTEXT_SHIFT} )
add_executable(test_equiv_set ${TEST_EQUIV_SET} )
add_executable(test_generator ${TEST_GENERATOR} )
add_executable(test_graph_to_qasm ${TEST_GRAPH_TO_QASM} )
add_executable(test_optimization ${TEST_OPTIMIZATION} )
add_executable(test_optimization_sa ${TEST_OPTIMIZATION_SA} )
add_executable(test_phase_shift ${TEST_PHASE_SHIFT} )
add_executable(test_pruning ${TEST_PRUNING} )
add_executable(test_quartz ${TEST_QUARTZ} )
add_executable(test_rigetti ${TEST_RIGETTI} )
add_executable(test_sparsity ${TEST_SPARSITY} )
add_executable(test_rotation_merging ${TEST_ROTATION_MERGING} )
add_executable(test_toffoli_flip ${TEST_TOFFOLI_FLIP} )
add_executable(test_apply_xfer ${TEST_APPLY_XFER} )
if(USE_ARBLIB)
    add_executable(test_arb ${TEST_ARB} )
endif()
